# codex-replay

./: .env.example  .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release-hygiene.yml  security.yml  smoke.yml
apps/web/: package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/runs/: page.tsx
apps/web/app/runs/[runId]/: page.tsx
apps/web/components/: replay-app.tsx
apps/web/lib/: api.ts  presentation.test.ts  presentation.ts
scripts/ci/: assert-http.sh  check-repo-hygiene.sh  create-release-artifacts.sh  run-smoke.sh  wait-for-http.sh
scripts/ci/fixtures/: smoke-trace.jsonl
services/api/: pyproject.toml
services/api/app/: codex.py  config.py  database.py  main.py  models.py
services/api/tests/: test_api.py
